Add heading on App.js, include heading's style

--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,11 @@ body {
     object-fit: cover;
 }
 
+h2{
+    text-align: center;
+    margin: 40px auto;
+}
+
 /*******************  Input ********************/
 
 .inputHolder {
